dotmanager.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotmanager-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
        - name: app-container
          image: mizucoffee/dotmanager:v1.0
          imagePullPolicy: Always
