koushi-bot.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koushi-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      role: koushi-bot
  template:
    metadata:
      labels:
        role: koushi-bot
    spec:
      containers:
        - name: koushi-bot
          image: mizucoffee/koushi-bot:v1.0
          imagePullPolicy: IfNotPresent
