dot-mizucoffee-net.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dot-mizucoffee-net
spec:
  replicas: 5
  selector:
    matchLabels:
      role: dot-mizucoffee-net
  template:
    metadata:
      labels:
        role: dot-mizucoffee-net
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: dot-mizucoffee-net
      containers:
        - name: dot-mizucoffee-net
          image: mizucoffee/static_serve:v1.0-node16
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dot-mizucoffee-net
spec:
  type: ClusterIP
  ports:
    - name: "nginx-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    role: dot-mizucoffee-net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dot-mizucoffee-net
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dot.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dot-mizucoffee-net
                port:
                  number: 80
