gtask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtask
spec:
  replicas: 5
  selector:
    matchLabels:
      role: gtask
  template:
    metadata:
      labels:
        role: gtask
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: gtask
      containers:
        - name: gtask
          image: mizucoffee/gtask:v1.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gtask
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: gtask
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtask
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gtask.mizucoffee.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gtask
                port:
                  number: 80
