lilac.yml
kind: Service
apiVersion: v1
metadata:
  name: lilac
spec:
  type: ExternalName
  externalName: 192.168.105.30

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lilac
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
spec:
  rules:
    - host: lilac.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: lilac
                port:
                  number: 8282
