mizu-coffee.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mizu-coffee
spec:
  replicas: 5
  selector:
    matchLabels:
      role: mizu-coffee
  template:
    metadata:
      labels:
        role: mizu-coffee
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: mizu-coffee
      containers:
        - name: mizu-coffee
          image: mizucoffee/mizu.coffee:v1.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mizu-coffee
spec:
  type: ClusterIP
  ports:
    - name: "nginx-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    role: mizu-coffee
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mizu-coffee
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mizu.coffee
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mizu-coffee
                port:
                  number: 80
  tls:
    - hosts:
      - "mizu.coffee"
      secretName: mizucoffee-net-tls
