mokumoku.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mokumoku
spec:
  replicas: 5
  selector:
    matchLabels:
      role: mokumoku
  template:
    metadata:
      labels:
        role: mokumoku
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: mokumoku
      containers:
        - name: mokumoku
          image: mizucoffee/mokumoku:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: mokumoku
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: mokumoku
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mokumoku
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
    - host: mokumoku.mizucoffee.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mokumoku
                port:
                  number: 80
