proxy-m-card-dev.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy-m-card-dev
spec:
  type: ExternalName
  externalName: 192.168.105.1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-m-card-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: m-card-dev.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: proxy-m-card-dev
                port:
                  number: 8001
  tls:
    - hosts:
      - "m-card-dev.mizucoffee.net"
      secretName: mizucoffee-net-tls
