proxy-m-card-prod.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy-m-card-prod
spec:
  type: ExternalName
  externalName: srv02.l.mizucoffee.com

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-m-card-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: m-card.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: proxy-m-card-prod
                port:
                  number: 8000
  tls:
    - hosts:
      - "m-card.mizucoffee.net"
      secretName: mizucoffee-net-tls
