sus2image.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sus2image
spec:
  replicas: 5
  selector:
    matchLabels:
      role: sus2image
  template:
    metadata:
      labels:
        role: sus2image
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: sus2image
      containers:
        - name: sus2image
          image: mizucoffee/sus2image:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: sus2image
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: sus2image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sus2image
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
    - host: sus2image.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sus2image
                port:
                  number: 80
  tls:
    - hosts:
      - "sus2image.mizucoffee.net"
      secretName: mizucoffee-net-tls
