svg2ogp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svg2ogp
spec:
  replicas: 5
  selector:
    matchLabels:
      role: svg2ogp
  template:
    metadata:
      labels:
        role: svg2ogp
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: svg2ogp
      containers:
        - name: svg2ogp
          image: mizucoffee/svg2ogp:v1.0
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: svg2ogp
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: svg2ogp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svg2ogp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: svg2ogp.mizucoffee.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svg2ogp
                port:
                  number: 80
# SOCKET
