ts-prisma-boilerplate.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-prisma-boilerplate
spec:
  replicas: 5
  selector:
    matchLabels:
      role: ts-prisma-boilerplate
  template:
    metadata:
      labels:
        role: ts-prisma-boilerplate
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ts-prisma-boilerplate
      containers:
        - name: ts-prisma-boilerplate
          image: mizucoffee/ts-prisma-boilerplate:v1.1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ts-prisma-boilerplate
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: ts-prisma-boilerplate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-prisma-boilerplate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
    - host: ts-prisma-boilerplate.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ts-prisma-boilerplate
                port:
                  number: 80
  tls:
    - hosts:
      - "ts-prisma-boilerplate.mizucoffee.net"
      secretName: mizucoffee-net-tls
