twiback.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twiback
spec:
  replicas: 5
  selector:
    matchLabels:
      role: twiback
  template:
    metadata:
      labels:
        role: twiback
    spec:
      topologySpreadConstraints:
        - topologyKey: node
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: twiback
      containers:
        - name: twiback
          image: mizucoffee/twiback:v1.0
          imagePullPolicy: Always # 消す
---
apiVersion: v1
kind: Service
metadata:
  name: twiback
spec:
  type: ClusterIP
  ports:
    - name: "express-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    role: twiback
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twiback
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: twiback.mizucoffee.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: twiback
                port:
                  number: 80
# SOCKET
